[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/GameLogic.gd" type="Script" id=1]
[ext_resource path="res://scenes/Graph.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Coworker.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/button-red.png" type="Texture" id=4]
[ext_resource path="res://scenes/Avatar.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VSplitContainer" parent="."]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.99
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1003.52
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.43

[node name="LeftCoworkerGrid" type="GridContainer" parent="VBoxContainer/Top"]
margin_right = 248.0
margin_bottom = 340.0
size_flags_horizontal = 3
columns = 2

[node name="Coworker" parent="VBoxContainer/Top/LeftCoworkerGrid" instance=ExtResource( 3 )]
margin_right = 122.0
margin_bottom = 168.0

[node name="Coworker2" parent="VBoxContainer/Top/LeftCoworkerGrid" instance=ExtResource( 3 )]
margin_left = 126.0
margin_right = 248.0
margin_bottom = 168.0

[node name="Coworker3" parent="VBoxContainer/Top/LeftCoworkerGrid" instance=ExtResource( 3 )]
margin_top = 172.0
margin_right = 122.0
margin_bottom = 340.0

[node name="Coworker4" parent="VBoxContainer/Top/LeftCoworkerGrid" instance=ExtResource( 3 )]
margin_left = 126.0
margin_top = 172.0
margin_right = 248.0
margin_bottom = 340.0

[node name="MainDisplay" type="PanelContainer" parent="VBoxContainer/Top"]
margin_left = 252.0
margin_right = 749.0
margin_bottom = 340.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/Top/MainDisplay"]
margin_left = 7.0
margin_top = 7.0
margin_right = 490.0
margin_bottom = 333.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_styles/panel = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_bg = Color( 1, 1, 1, 1 )
custom_colors/font_color_fg = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiffGraph" parent="VBoxContainer/Top/MainDisplay/TabContainer" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
margin_right = 0.0
margin_bottom = 0.0

[node name="TotalGraph" parent="VBoxContainer/Top/MainDisplay/TabContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
margin_right = 0.0
margin_bottom = 0.0

[node name="CurrentWorker" type="PanelContainer" parent="VBoxContainer/Top/MainDisplay"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 490.0
margin_bottom = 333.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="FadeTimer" type="Timer" parent="VBoxContainer/Top/MainDisplay/CurrentWorker"]
wait_time = 3.0
one_shot = true

[node name="FadeTween" type="Tween" parent="VBoxContainer/Top/MainDisplay/CurrentWorker"]

[node name="Avatar" parent="VBoxContainer/Top/MainDisplay/CurrentWorker" instance=ExtResource( 5 )]
margin_right = 483.0
margin_bottom = 326.0
theme = SubResource( 5 )
custom_styles/panel = SubResource( 6 )

[node name="RightCoworkerGrid" type="GridContainer" parent="VBoxContainer/Top"]
margin_left = 753.0
margin_right = 1003.0
margin_bottom = 340.0
size_flags_horizontal = 3
columns = 2

[node name="Coworker5" parent="VBoxContainer/Top/RightCoworkerGrid" instance=ExtResource( 3 )]
margin_right = 123.0
margin_bottom = 168.0

[node name="Coworker6" parent="VBoxContainer/Top/RightCoworkerGrid" instance=ExtResource( 3 )]
margin_left = 127.0
margin_bottom = 168.0

[node name="Coworker7" parent="VBoxContainer/Top/RightCoworkerGrid" instance=ExtResource( 3 )]
margin_top = 172.0
margin_right = 123.0
margin_bottom = 340.0

[node name="Coworker8" parent="VBoxContainer/Top/RightCoworkerGrid" instance=ExtResource( 3 )]
margin_left = 127.0
margin_top = 172.0
margin_bottom = 340.0

[node name="Bottom" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 352.0
margin_right = 1003.52
margin_bottom = 588.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Options" type="VBoxContainer" parent="VBoxContainer/Bottom"]
margin_right = 292.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Meeting" type="Button" parent="VBoxContainer/Bottom/Options"]
margin_top = 37.0
margin_right = 292.0
margin_bottom = 57.0
size_flags_vertical = 6
text = "Start personal meeting"

[node name="ChangeTask" type="VBoxContainer" parent="VBoxContainer/Bottom/Options"]
margin_top = 99.0
margin_right = 292.0
margin_bottom = 137.0

[node name="CurrentTask" type="HBoxContainer" parent="VBoxContainer/Bottom/Options/ChangeTask"]
margin_right = 292.0
margin_bottom = 14.0
size_flags_vertical = 6

[node name="Label" type="Label" parent="VBoxContainer/Bottom/Options/ChangeTask/CurrentTask"]
margin_right = 144.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Current task: "
align = 1
valign = 1

[node name="TaskName" type="Label" parent="VBoxContainer/Bottom/Options/ChangeTask/CurrentTask"]
margin_left = 148.0
margin_right = 292.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "unkown"
align = 1
valign = 1

[node name="ChangeTask" type="HBoxContainer" parent="VBoxContainer/Bottom/Options/ChangeTask"]
margin_top = 18.0
margin_right = 292.0
margin_bottom = 38.0
size_flags_vertical = 6

[node name="Label" type="Label" parent="VBoxContainer/Bottom/Options/ChangeTask/ChangeTask"]
margin_right = 144.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Force  to work on"
align = 1
valign = 1

[node name="Switch" type="OptionButton" parent="VBoxContainer/Bottom/Options/ChangeTask/ChangeTask"]
margin_left = 148.0
margin_right = 292.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "choose one"
align = 1
items = [ "choose one", null, false, 0, false, "Debug", null, false, 1, false, "Code", null, false, 2, false, "Document", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flame" type="Button" parent="VBoxContainer/Bottom/Options"]
margin_top = 178.0
margin_right = 292.0
margin_bottom = 198.0
size_flags_vertical = 6
text = "Flame coworker"

[node name="Indicators" type="CenterContainer" parent="VBoxContainer/Bottom"]
margin_left = 296.0
margin_right = 705.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.4

[node name="RedButton" type="PanelContainer" parent="VBoxContainer/Bottom"]
margin_left = 709.0
margin_right = 1003.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 7 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Bottom/RedButton"]
margin_right = 294.0
margin_bottom = 236.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
[connection signal="timeout" from="VBoxContainer/Top/MainDisplay/CurrentWorker/FadeTimer" to="." method="_on_start_fading"]
